# GenPass2

./: .gitignore  main.py  pyproject.toml
main_menu/: mainmenu_widg_commands.py
src/: check_widg_commands.py  check_widget_commands.py  checkpas_interface.py  function_generator.py  generator_interface.py  generator_widg_commands.py  generator_widget_commands.py  main.py  other_classes.py  root_description.py  set_interface.py  set_widg_commands.py  set_widget_commands.py  title_interface.py  widget_classes.py
src/main_menu/: interface.py  mainmenu_interface.py  mainmenu_widg_commands.py  widget_commands.py
